-
Bug
-
Resolution: Fixed
-
P4: Low
-
None
-
5.7.0 RC
-
None
-
Android 4.3 and Arch Linux
I try to click a button and if I move even a tiny bit cancel is emitted instead of clicked.
I would only expect it to emit canceled if my touch left the button, which it didn't.
This was working until 5.7.0 RC.
import QtQuick 2.6 import QtQuick.Layouts 1.3 import QtQuick.Window 2.2 import QtQuick.Controls 2.0 import QtQuick.Controls.Material 2.0 ApplicationWindow { id: window visible: true width: 640 height: 480 Drawer { edge: Qt.RightEdge clip: false height: window.height width: 512 contentItem: Pane { Button { width: 400 height: 200 anchors.centerIn: parent text: "Test" onCanceled: console.log("canceled") } } } }
- relates to
-
QTBUG-77202 No touch release event for AbstractButton inside of ListView with pressDelay set
-
- Closed
-
-
QTBUG-102036 Release and Clicked not fired for Buttons in ListView with pressDelay set with touch screen
-
- Closed
-
-
QTBUG-102037 Invalid value of pressed property in ListView delegate
-
- Closed
-
-
QTBUG-55577 its very difficult to click on list item on Drawer
-
- Closed
-
| For Gerrit Dashboard: QTBUG-53929 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 162975,3 | Don't be too eager to steal presses outside the drawer | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |